event handler has a working example
